# wechat-mp-article-reader

./: .gitignore  README.en.md  README.md  SKILL.md  pyproject.toml
references/: fallbacks.md
scripts/: fetch_wechat.py
tests/: test_fetch.py
tests/fixtures/: sample.html
