[project]
name = "wechat-mp-article-reader"
version = "0.1.0"
description = "读取微信公众号文章正文的 Claude Code skill，纯标准库、安装即用"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "zhangzhiyuan" }]
keywords = ["wechat", "claude-code", "skill", "scraper", "mp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

# 核心零第三方依赖：抓取用 urllib，解析用 html.parser。
[project.optional-dependencies]
# 浏览器兜底（可选）：当 urllib 拿到的页面是壳/验证页时启用。
browser = ["playwright"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]
